--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tensorflow/tfjs": "^4.22.0",
     "canvas-confetti": "^1.9.4",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "papaparse": "^5.5.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
